깃배포 수정중

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bamiya.github.io/resume",
+  "homepage": "https://Bamiya.github.io/resume",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
