--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
